# dsa-run-custom-ai-models

./: .dockerignore  .gitignore  Dockerfile  README.md  put_cli.py  pyproject.toml
.github/workflows/: cutom-AI-Model-actions.yml
ai-inference-model/: Dockerfile  main.py
aiInferenceModel/: Dockerfile  main.py  nuclick-AI-Model.py  nuclickAIModel.py  nuclickClassification.py  nuclickSegmentation.py  requirements.txt  samMobile.py  samOnclick.py  samSegmentation.py  utils.py
aiInferenceModel/ai_models/: CustomAIModel.py  nuclickClassification.py  nuclickSegmentation.py  samMobile.py  samOnclick.py  samSegmentation.py  stardistSegmentation.py
docs/tutorials/: developerDocs.md  mobileSegmentAnything.md  nuclickClassification.md  nuclickSegmentation.md  segmentAnythingSegmentation.md  stardistSegmentation.md
dsa_run_custom_ai_models/: slicer_cli_list.json
dsa_run_custom_ai_models/runCustomAIModels/: runCustomAIModels.py  runCustomAIModels.xml  utils.py
