[tool.poetry]
name = "dsa-run-custom-ai-models"
version = "0.1.0"
description = ""
authors = ["Subin Erattakulangara <s.erattakulangara@kitware.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
