[tool.poetry]
name = "dsa-run-custom-ai-models"
version = "0.1.0"
description = ""
authors = ["Subin Erattakulangara <s.erattakulangara@kitware.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
girder-slicer-cli-web = "^1.3.5"
h5py = "^3.9.0"
girder-client = "^3.1.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
